--- a/getir/Base.lproj/Main.storyboard
+++ b/getir/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                         <viewLayoutGuide key="safeArea" id="ohK-br-Byl"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Gezginler" id="mLS-Qh-BPE"/>
-                    <navigationItem key="navigationItem" title="Gezginler" id="bsp-6s-rPN">
+                    <navigationItem key="navigationItem" title="Gezginler" largeTitleDisplayMode="always" id="bsp-6s-rPN">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="Nxm-3n-yMu">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="CRz-m1-c4f">
                                 <rect key="frame" x="276" y="5.5" width="83" height="33"/>
@@ -67,7 +67,7 @@
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Paketler" id="tpj-09-8Sv"/>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Paketler" id="gRh-zT-PGO">
+                    <navigationItem key="navigationItem" title="Paketler" largeTitleDisplayMode="always" id="gRh-zT-PGO">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="Kb9-9D-VFb">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="cfV-gS-TQv">
                                 <rect key="frame" x="276" y="5.5" width="83" height="33"/>
@@ -200,8 +200,8 @@
                     </view>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="Iwa-d6-N0D">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="mZL-BM-MYB">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="YW2-pa-gBR">
-                                <rect key="frame" x="16" y="7" width="50" height="30"/>
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="YW2-pa-gBR">
+                                <rect key="frame" x="16" y="5.5" width="50" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
@@ -214,8 +214,8 @@
                             </button>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="3zc-bX-oj0">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="nah-gZ-WXB">
-                                <rect key="frame" x="309" y="7" width="50" height="30"/>
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="nah-gZ-WXB">
+                                <rect key="frame" x="304" y="5.5" width="55" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
@@ -269,11 +269,21 @@
                                             <action selector="addButtonTapped" destination="jjw-Ae-60Z" eventType="touchUpInside" id="fxg-R1-FI8"/>
                                         </connections>
                                     </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A6G-vp-Qt5">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="cyu-qf-eW1"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="A6G-vp-Qt5" firstAttribute="leading" secondItem="YBL-62-ZUn" secondAttribute="leading" id="7ZS-Ju-OKE"/>
+                                    <constraint firstAttribute="trailing" secondItem="A6G-vp-Qt5" secondAttribute="trailing" id="DFM-Pm-joQ"/>
                                     <constraint firstAttribute="height" constant="50" id="Lwe-hD-jQn"/>
                                     <constraint firstItem="tUQ-rV-bgF" firstAttribute="centerX" secondItem="YBL-62-ZUn" secondAttribute="centerX" id="aq8-6h-HS4"/>
+                                    <constraint firstItem="A6G-vp-Qt5" firstAttribute="top" secondItem="YBL-62-ZUn" secondAttribute="top" id="pjL-Kh-Twv"/>
                                     <constraint firstItem="tUQ-rV-bgF" firstAttribute="centerY" secondItem="YBL-62-ZUn" secondAttribute="centerY" id="v3a-a4-Nea"/>
                                 </constraints>
                             </view>
@@ -371,7 +381,7 @@
                         <viewLayoutGuide key="safeArea" id="rMB-9W-QUZ"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Güncel Durumlar" id="m1I-R0-d7g"/>
-                    <navigationItem key="navigationItem" id="ekQ-9I-xIq"/>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="ekQ-9I-xIq"/>
                     <connections>
                         <outlet property="tableView" destination="waZ-qc-ltk" id="1pM-42-Dcr"/>
                     </connections>
@@ -411,7 +421,7 @@
         <scene sceneID="4Cg-RD-xlI">
             <objects>
                 <navigationController id="HcW-bg-Vxd" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Durumlar" id="gba-ZW-6fh"/>
+                    <tabBarItem key="tabBarItem" title="Durumlar" image="Information Icon" id="gba-ZW-6fh"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="NgR-c7-AfC">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -616,6 +626,7 @@
     </scenes>
     <resources>
         <image name="Archive Icon" width="24" height="20"/>
+        <image name="Information Icon" width="22" height="22"/>
         <image name="Workout" width="25" height="25"/>
     </resources>
 </document>
